[package]
name = "digraphx-rs"
version = "0.1.2"
edition = "2021"
description = "Network Optimization Algorithms in Rust"
repository = "https://github.com/luk036/digraphx-rs"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
serde = ["petgraph/serde"]
benchmark = []
std = ["num-traits/std", "dep:env_logger", "dep:log"]

[dependencies]
num = { version = "0.4.3" }
num-traits = { version = "0.2.19" }
log = { version = "0.4", optional = true }
env_logger = { version = "0.11", optional = true }

[dependencies.petgraph]
version = "0.8.2"
features = ["serde-1"]

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "algorithms"
harness = false
