[package]
name = "digraphx-rs"
version = "0.2.0"
edition = "2021"
rust-version = "1.70"
description = "Network Optimization Algorithms in Rust — generic container-of-containers graph"
repository = "https://github.com/luk036/digraphx-rs"
license = "MIT OR Apache-2.0"

[features]
default = []
std = ["dep:log", "dep:env_logger"]
petgraph = ["dep:petgraph"]

[dependencies]
num = "0.4.3"
log = { version = "0.4.32", optional = true }
env_logger = { version = "0.11.10", optional = true }

[dependencies.petgraph]
version = "0.8.3"
features = ["serde-1"]
optional = true

[dev-dependencies]
criterion = { version = "0.8.2", features = ["html_reports"] }
quickcheck = "1.0"

[[bench]]
name = "algorithms"
harness = false
